type: <fix> action: <deleted overflow-y for win>

--- a/style/about.scss
+++ b/style/about.scss
@@ -30,7 +30,6 @@ h1 {
     grid-area: box1;
     max-width: 75%;
   }
-  overflow-y: scroll;
 }
 
 .paragraph-container {
