--- a/style/publication.scss
+++ b/style/publication.scss
@@ -9,7 +9,6 @@
   font-family: sans-serif;
   font-weight: 400;
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 h1 {
